--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -22,11 +22,13 @@ navbar {
     cursor: pointer;
     transition: color 0.2s;
     &.active {
-      color: darken(#f31214, 10%);
+      color: darken(  #98dafc
+, 10%);
     }
     &:hover {
       background: none;
-      color: #f31214;
+      color: #98dafc;
+;
     }
     &:focus {
       background: none;
@@ -50,7 +52,7 @@ navbar {
       margin-right: 5px;
     }
     a {
-      color: #f30046;
+        color: #98dafc;
       cursor: pointer;
     }
   }
